--- a/css/feather.css
+++ b/css/feather.css
@@ -51,7 +51,7 @@ a:hover {
 }
 
 .container {
-    width: 90%;
+    padding: 0 10%;
     margin: 0 auto;
 }
 
@@ -59,7 +59,7 @@ a:hover {
     width: 100%;
 }
 .nav ul {
-    width: 90%;
+    padding: 0 7%;
     margin: 0 auto;
 }
 .nav li {
