--- a/css/feather.css
+++ b/css/feather.css
@@ -218,6 +218,19 @@ a:hover {
 }
 
 @media (max-width:570px) {
+    .nav {
+        width: 100%;
+    }
+    .nav ul {
+        margin: 0 auto;
+        display: block;
+    }
+    .nav li {
+        width: 100%;
+    }
+    .nav a {
+    }
+
     .button {
         margin: 5px auto;
         max-width: 95%;
