--- a/css/feather.css
+++ b/css/feather.css
@@ -150,71 +150,60 @@ a:hover {
 /* grid of 12 */
 .grid {
     width: 100%;
-    margin: 10px 1%;
+    padding: 1px 0px;
     background-color: #FFF;
     text-align: center;
+    float:left;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
 }
-.grid:first-child { margin-left: 0; }
-.grid:last-child { margin-right: 0; }
 
 .twelve {
-    width: 100%;
-    float: left;
+    /*width: 100%;*/
 }
 .eleven {
     /*width: 91.66%;*/
-    width: 89.66%;
-    float: left;
+    /*width: 89.66%;*/
 }
 .ten {
     /*width: 83.33%;*/
-    width: 81.33%;
-    float: left;
+    /*width: 81.33%;*/
 }
 .nine {
     /*width: 75%;*/
-    width: 73%;
-    float: left;
+    /*width: 73%;*/
 }
 .eight {
     /*width: 66.66%;*/
-    width: 64.66%;
-    float: left;
+    /*width: 64.66%;*/
 }
 .seven {
     /*width: 58.33%;*/
-    width: 56.33%;
-    float: left;
+    /*width: 56.33%;*/
 }
 .six {
     /*width: 50%;*/
-    width: 48%;
-    float: left;
+    /*width: 48%;*/
 }
 .five {
     /*width: 41.66%;*/
-    width: 39.66%;
-    float: left;
+    /* width: 39.66%;*/
 }
 .four {
-    /*width: 33.33%;*/
-    width: 31.33%;
-    float: left;
+    /*width: 33%;*/
+    /* width: 31.33%;*/
 }
 .three {
-    width: 23%;
-    float: left;
+    /*width: 23%;*/
     /*width: 23%;*/
 }
 .two {
-    /*width: 16.67%;*/
-    width: 14.67%;
-    float: left;
+    /*width: 16.33%;*/
+    /*width: 14.67%;*/
 }
 .one {
     /*width: 8.33%;*/
-    width: 6.33%;
-    float: left;
+    /*width: 6.33%;*/
 }
 
 @media (max-width:570px) {
@@ -252,10 +241,8 @@ a:hover {
         width: 48%;
         float: left;.
         width: 48%;
-        float: left;
     }
     .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve {
         width: 98%;
-        float: left;
     }
 }
