--- a/css/feather.css
+++ b/css/feather.css
@@ -154,56 +154,42 @@ a:hover {
     background-color: #FFF;
     text-align: center;
     float:left;
-    border-right: 1px solid black;
-    border-left: 1px solid black;
 }
-
 .twelve {
-    /*width: 100%;*/
+  width: 100%;
 }
 .eleven {
-    /*width: 91.66%;*/
-    /*width: 89.66%;*/
+  width: 91.66666667%;
 }
 .ten {
-    /*width: 83.33%;*/
-    /*width: 81.33%;*/
+  width: 83.33333333%;
 }
 .nine {
-    /*width: 75%;*/
-    /*width: 73%;*/
+  width: 75%;
 }
 .eight {
-    /*width: 66.66%;*/
-    /*width: 64.66%;*/
+  width: 66.66666667%;
 }
 .seven {
-    /*width: 58.33%;*/
-    /*width: 56.33%;*/
+  width: 58.33333333%;
 }
 .six {
-    /*width: 50%;*/
-    /*width: 48%;*/
+  width: 50%;
 }
 .five {
-    /*width: 41.66%;*/
-    /* width: 39.66%;*/
+  width: 41.66666667%;
 }
 .four {
-    /*width: 33%;*/
-    /* width: 31.33%;*/
+  width: 33.33333333%;
 }
 .three {
-    /*width: 23%;*/
-    /*width: 23%;*/
+  width: 25%;
 }
 .two {
-    /*width: 16.33%;*/
-    /*width: 14.67%;*/
+  width: 16.66666667%;
 }
 .one {
-    /*width: 8.33%;*/
-    /*width: 6.33%;*/
+  width: 8.33333333%;
 }
 
 @media (max-width:570px) {
@@ -238,11 +224,9 @@ a:hover {
         clear:both;
     }
     .one, .two {
-        width: 48%;
-        float: left;.
-        width: 48%;
+        width: 50%;
     }
     .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve {
-        width: 98%;
+        width: 100%;
     }
 }
