--- a/css/feather.css
+++ b/css/feather.css
@@ -53,7 +53,6 @@ a:hover {
     padding: 20px 10%;
     margin: 0 auto;
     background-color: #fafafa;
-    clear:both;
 }
 .container-transparent {
     padding: 20px 10%;
@@ -149,11 +148,11 @@ a:hover {
 
 /* grid of 12 */
 .grid {
-    width: 100%;
-    padding: 1px 0px;
-    background-color: #FFF;
+    background-color: #DDD;
     text-align: center;
     float:left;
+    margin: 10px -1px;
+    border: 1px solid black;
 }
 .twelve {
   width: 100%;
