--- a/css/feather.css
+++ b/css/feather.css
@@ -126,7 +126,12 @@ a:hover {
 .footer-dark a:hover {
     color: #FFF;
 }
-
+.footer .grid {
+    text-align: center;
+    float:left;
+    margin: 10px 0px;
+    border: none;
+}
 
 .button {
     display: inline-block;
@@ -264,6 +269,12 @@ a:hover {
         padding: 20px 2%;
         margin: 0 auto;
         clear:both;
+    }
+
+    .footer .grid {
+        text-align: center;
+        margin: 0px 0px;
+        border: none;
     }
     .one, .two {
         width: 50%;
