made body background white again, tweaked heading settings

--- a/css/feather.css
+++ b/css/feather.css
@@ -6,33 +6,37 @@
 body {
     margin: 0 auto;
     font-family: Arial, sans-serif;
-    background-color: #d8d8d8;
+    background-color: #FFFFFF;
 }
 
 h1 {
-    font-size: 3.3em; margin: 20px 0; }
+    font-size: 40px; 
+    margin: 20px 0px 10px 0px;
+}
 h2 {
-    font-size: 3em;
-    margin: 18px 0;
-
+    font-size: 35px; 
+    line-height: 1.1em;
+    margin: 20px 0px 10px 0px;
 }
 h3 {
-    font-size: 2.5em;
-    margin: 16px 0;
+    font-size: 30px; 
+    line-height: 1.1em;
+    margin: 20px 0px 10px 0px;
 }
 h4 {
-    font-size: 2.1em;
-    margin: 14px 0;
-
+    font-size: 25px; 
+    line-height: 1.1em;
+    margin: 10px 0px 10px 0px;
 }
 h5 {
-    font-size: 1.8em;
-    margin: 12px 0;
-
+    font-size: 20px; 
+    line-height: 1.1em;
+    margin: 10px 0px 10px 0px;
 }
 h6 {
-    font-size: 1.3em;
-    margin: 10px 0;
+    font-size: 15px; 
+    line-height: 1.1em;
+    margin: 10px 0px 10px 0px;
 }
 
 
