--- a/css/feather.css
+++ b/css/feather.css
@@ -9,34 +9,32 @@ body {
     background-color: #FFFFFF;
 }
 
+h1, h2, h3 {
+    margin: 20px 0px 10px 0px;
+    line-height: 1.1em;
+}
+h4, h5, h6 {
+    margin: 10px 0px 10px 0px;
+    line-height: 1.1em;
+}
+
 h1 {
     font-size: 40px; 
-    margin: 20px 0px 10px 0px;
 }
 h2 {
     font-size: 35px; 
-    line-height: 1.1em;
-    margin: 20px 0px 10px 0px;
 }
 h3 {
     font-size: 30px; 
-    line-height: 1.1em;
-    margin: 20px 0px 10px 0px;
 }
 h4 {
     font-size: 25px; 
-    line-height: 1.1em;
-    margin: 10px 0px 10px 0px;
 }
 h5 {
     font-size: 20px; 
-    line-height: 1.1em;
-    margin: 10px 0px 10px 0px;
 }
 h6 {
     font-size: 15px; 
-    line-height: 1.1em;
-    margin: 10px 0px 10px 0px;
 }
 
 
